RESOLVED FIXED226349
[Cocoa] HDR variants in HLS playlists not selected when screen is HDR
https://bugs.webkit.org/show_bug.cgi?id=226349
Summary [Cocoa] HDR variants in HLS playlists not selected when screen is HDR
Jer Noble
Reported 2021-05-27 12:48:14 PDT
[Cocoa] HDR variants in HLS playlists not selected when screen is HDR
Attachments
Patch (10.26 KB, patch)
2021-05-27 12:50 PDT, Jer Noble
no flags
Build fix (3.65 KB, patch)
2021-05-28 13:43 PDT, Don Olmstead
no flags
Jer Noble
Comment 1 2021-05-27 12:48:40 PDT
Jer Noble
Comment 2 2021-05-27 12:50:51 PDT
EWS
Comment 3 2021-05-28 09:44:41 PDT
Committed r278204 (238247@main): <https://commits.webkit.org/238247@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 429913 [details].
Don Olmstead
Comment 4 2021-05-28 13:43:08 PDT
Reopening for build fix for non Cocoa platforms The WinCairo EWS caught this build failure for Windows but not GTK, since its not turning on GPU process, and not PlayStation since it has no EWS.
Don Olmstead
Comment 5 2021-05-28 13:43:29 PDT
Created attachment 430048 [details] Build fix
EWS
Comment 6 2021-05-28 14:53:51 PDT
Committed r278227 (238265@main): <https://commits.webkit.org/238265@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 430048 [details].
Basuke Suzuki
Comment 7 2021-05-28 15:31:27 PDT
*** Bug 226400 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.