[Cocoa] HDR variants in HLS playlists not selected when screen is HDR https://bugs.webkit.org/show_bug.cgi?id=226349 <rdar://76963977>

Reviewed by Eric Carlson.

An existing test, http/tests/media/hls/hls-hdr-switch.html, should have caught this regression,
but is not currently functional as it depends on PHP, which has been removed.

The preferredDynamicRangeMode needs to be piped over from WebContent -> GPU process.

* GPUProcess/media/RemoteMediaPlayerProxy.cpp:
(WebKit::RemoteMediaPlayerProxy::setPreferredDynamicRangeMode):
* GPUProcess/media/RemoteMediaPlayerProxy.h:
* GPUProcess/media/RemoteMediaPlayerProxy.messages.in:
* GPUProcess/media/cocoa/RemoteMediaPlayerProxyCocoa.mm:
(WebKit::RemoteMediaPlayerProxy::prepareForPlayback):
* Scripts/webkit/messages.py:
(headers_for_type):
* WebProcess/GPU/media/MediaPlayerPrivateRemote.cpp:
(WebKit::MediaPlayerPrivateRemote::prepareForPlayback):
(WebKit::MediaPlayerPrivateRemote::setPreferredDynamicRangeMode):
* WebProcess/GPU/media/MediaPlayerPrivateRemote.h:


Canonical link: https://commits.webkit.org/238247@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278204 268f45cc-cd09-0410-ab3c-d52691b4dbfc